@@ -1,5 +1,5 @@
 # Version Identifier
-version = 2.1.0_SNAPSHOT-2013-05-28
+version = 2.1.0_FM_ORCJAVA-267
 
 # Compile with debug information included
 build.debug = true
